fix(#5871): remove SimpleNode's vestigial int constructor parameter (#6117)
(cherry picked from commit dc1860b2502c40e54a7e79a8f7b45e6ec827c841)